test_regress/t/t_constraint_non_const_exp_pow_unsup.out
%Error-UNSUPPORTED: t/t_constraint_non_const_exp_pow_unsup.v:11:27: Unsupported: power expression with non constant exponent in constraint
   11 |    constraint c_power { x ** y < 10000; }
      |                           ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
